# python-restful

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 19a751ef0e28_initial_migration.py
app/: auth.py  config.py  crud.py  database.py  logging_config.py  main.py  models.py
app/routers/: v1.py
tests/: conftest.py  test_tasks.py
