[project]
name = "task-api"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # Allow Depends() in function defaults (FastAPI pattern)
# E: pycodestyle errors
# F: pyflakes
# I: isort (import sorting)
# B: bugbear (common bugs)
# UP: pyupgrade (modern syntax)

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "slowapi.*", "pythonjsonlogger.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101", "B105"]  # B101: assert, B105: false positive on "bearer"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
